# ML-OPS

first/: README.md  infer.py  main.py  pointer.py  pyproject.toml  train.py
first/dataloader/: loaddatasets.py
first/models/: CNN.pth  CNN.py  linearregression.py
