[tool.poetry]
name = "first"
version = "0.1.0"
description = ""
authors = ["Igoreshka <ignashin.in@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.16"
numpy ="^1.24.4"
scikit-learn = "^1.3.0"
pandas ="^1.5.0"
matplotlib = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
