[tool.poetry]
name = "first"
version = "0.1.0"
description = ""
authors = ["Igoreshka <ignashin.in@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.16"

torch = "^2.0.1"
numpy ="^1.24.4"
matplotlib = "^3.7.0"

torchvision ="^0.15.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
